    - ensure the gnome debconf frontend is used
    - make screenshot loading url configurable
    - cleanup
    - use internal viewer for large screenshot display 
      (thanks to Andrew Higginson)
    - made install/remove button enable again if the user
      cancels the action
    - use the new ShowImageDialog
    - detect if a package is not available for the given 
      architecture
  * softwarestore/view/widgets/imagedialog.py:
    - new widget for the large screenshot display
  * merged the help xml fixes from Matthew East (many thanks!)
    LP: #429897
  * fix icon display in the progress view (LP: #428679)
  * softwarestore/view/appview.py:
    - fix crash for applications with no summary
  * softwarestore/view/widgets/searchentry.py:
    - add undo/redo (LP: #428291)
  * softwarestore/app.py:
    - simply the copy/cut/paste
    - use undo/redo from searchentry 
    - fix crash for packages not available in cache (LP #428356)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 15 Sep 2009 11:35:48 +0200

software-store (0.3.2) karmic; urgency=low

  * softwarestore/view/viewswitcher.py:
    - make the iconsize 24px (LP: #425797)
  * data/ubuntu-software-store.desktop.in:
    - add "NoDisplay=true", we enforce showing it at a special
      location via a gnome-panel patch (LP: #426209)
  * merge fixes from rugby471, many thanks!
  * softwarestore/view/appview.py:
    - sort in locale friendly way
  * softwarestore/app.py:
    - call setlocale() to ensure python-apt provides translated
      package descriptions
  * do not display progress circle once the screenshot has 
    loaded (LP: #425859) - thanks to rugby471

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 11 Sep 2009 23:25:57 +0200

software-store (0.3.1) karmic; urgency=low

  * softwarestore/app.py, softwarestore/view/appdetailsview.py:
    - send pkgname instead of apt.Package object in the selected
      signal (LP: #427157)
  * softwarestore/view/availablepane.py: